@@ -46,28 +46,47 @@ public class YouTubeClient {
         });
     }
 
+    /**
+     * GET JSON avec prise en charge du 304:
+     * - on tente avec If-None-Match si etag != null
+     * - si 304 Not Modified, on refait la requête SANS ETag pour récupérer le corps
+     */
     private Mono<JsonNode> getJson(URI uri, String etag) {
-        log.debug("GET {}", uri.toString().replaceAll("([?&]key=)[^&]+", "$1***"));
+        String safeUri = uri.toString().replaceAll("([?&]key=)[^&]+", "$1***");
+        log.debug("GET {}", safeUri);
+
         return http.get()
                 .uri(uri)
                 .headers(h -> { if (etag != null) h.set(HttpHeaders.IF_NONE_MATCH, etag); })
-                .exchangeToMono(this::handle)
+                .exchangeToMono(resp -> {
+                    int code = resp.statusCode().value();
+
+                    // 2xx -> lire le corps
+                    if (resp.statusCode().is2xxSuccessful()) {
+                        return resp.bodyToMono(String.class)
+                                .map(this::toJsonNode);
+                    }
+
+                    // 304 -> fallback sans ETag
+                    if (code == HttpStatus.NOT_MODIFIED.value()) {
+                        log.debug("HTTP 304 Not Modified — fallback GET without ETag");
+                        return http.get()
+                                .uri(uri)
+                                .retrieve()
+                                .bodyToMono(String.class)
+                                .map(this::toJsonNode);
+                    }
+
+                    // autres erreurs -> message lisible
+                    return resp.bodyToMono(String.class).defaultIfEmpty("")
+                            .flatMap(b -> Mono.error(new RuntimeException("YouTube API error " + code + " body=" + b)));
+                })
                 .timeout(Duration.ofSeconds(20));
     }
 
-    private Mono<JsonNode> handle(ClientResponse resp) {
-        int code = resp.statusCode().value();
-        if (resp.statusCode().is2xxSuccessful()) {
-            return resp.bodyToMono(String.class).map(s -> {
-                try { return M.readTree(s); } catch (Exception e) { throw new RuntimeException(e); }
-            });
-        }
-        if (code == HttpStatus.NOT_MODIFIED.value()) {
-            log.debug("HTTP 304 Not Modified");
-            return Mono.empty();
-        }
-        return resp.bodyToMono(String.class).defaultIfEmpty("")
-                .flatMap(b -> Mono.error(new RuntimeException("YouTube API error " + code + " body=" + b)));
+    private JsonNode toJsonNode(String body) {
+        try { return M.readTree(body); }
+        catch (Exception e) { throw new RuntimeException(e); }
     }
 
     /** channels.list — part=contentDetails */
@@ -78,23 +97,27 @@ public class YouTubeClient {
                 .queryParam("key", apiKey)
                 .build(true)
                 .toUri();
+        // pas d'ETag ici, c’est léger
         return getJson(uri, null);
     }
 
-    /** playlistItems.list — part=contentDetails,snippet ; etag géré par l’appelant */
+    /** playlistItems.list — part=contentDetails,snippet ; gère ETag via getJson() */
     public Mono<JsonNode> playlistItems(String apiKey, String playlistId, Integer maxResults, String pageToken, String etag) {
-        int page = Math.clamp(maxResults == null ? 50 : maxResults, 1, 50);
+        int page = (maxResults == null ? 50 : maxResults);
+        page = Math.max(1, Math.min(50, page)); // Java n’a pas Math.clamp
+
         UriComponentsBuilder b = UriComponentsBuilder.fromHttpUrl(BASE + "/playlistItems")
                 .queryParam("part", "contentDetails,snippet")
                 .queryParam("playlistId", playlistId)
                 .queryParam("maxResults", page)
                 .queryParam("key", apiKey);
         if (pageToken != null) b.queryParam("pageToken", pageToken);
+
         URI uri = b.build(true).toUri();
         return getJson(uri, etag);
     }
 
-    /** videos.list — part=snippet,statistics,contentDetails (pas d’encodage manuel des IDs) */
+    /** videos.list — part=snippet,statistics,contentDetails (IDs en CSV) */
     public Mono<JsonNode> videosList(String apiKey, List<String> ids) {
         if (ids == null || ids.isEmpty()) {
             return Mono.just(M.createObjectNode().putArray("items"));
@@ -102,10 +125,11 @@ public class YouTubeClient {
         String joined = String.join(",", ids);
         URI uri = UriComponentsBuilder.fromHttpUrl(BASE + "/videos")
                 .queryParam("part", "snippet,statistics,contentDetails")
-                .queryParam("id", joined)  // UriComponentsBuilder encode proprement (pas de %252C)
+                .queryParam("id", joined)
                 .queryParam("key", apiKey)
                 .build(true)
                 .toUri();
+        // pas d’ETag ici pour fiabiliser la collecte des stats
         return getJson(uri, null);
     }
 }
